--- a/DeliverySite/DeliverySite/Views/Shared/_Layout.cshtml
+++ b/DeliverySite/DeliverySite/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Login<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="../Patient/Login">User Login</a></li>
+                            <li><a href="../User/Login">User Login</a></li>
                             <li><a href="../Doctor/DoctorLogin">Manager Login</a></li>
                         </ul>
                     </li>
