--- a/DeliverySite/DeliverySite/Views/Shared/_Layout.cshtml
+++ b/DeliverySite/DeliverySite/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Login<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="../User/Login">User Login</a></li>
-                            <li><a href="../Doctor/DoctorLogin">Manager Login</a></li>
+                            <li><a href="../Manager/Login">Manager Login</a></li>
                         </ul>
                     </li>
                 </ul>
