--- a/DeliverySite/DeliverySite/Views/Shared/_LayoutUsers.cshtml
+++ b/DeliverySite/DeliverySite/Views/Shared/_LayoutUsers.cshtml
@@ -45,8 +45,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Make Reservation", "MakeOrder", "Patient")</li>
-                    <li>@Html.ActionLink("Watch Yours Orders", "ShowPatientOrders", "Patient")</li>
+                    <li>@Html.ActionLink("Products", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Make Reservation", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Watch Yours Orders", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li id="signout">@Html.ActionLink("Sign out", "SignOut", "Home")</li>
