--- a/DeliverySite/DeliverySite/Views/Manager/ManagerLogin.cshtml
+++ b/DeliverySite/DeliverySite/Views/Manager/ManagerLogin.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Manager Login";
 }
 
-<h2>Login</h2>
+<h2>Manager Login</h2>
 
 
 @using (Html.BeginForm("CheckLogin", "Manager", FormMethod.Post))
