--- a/DeliverySite/DeliverySite/Views/Shared/_Layout.cshtml
+++ b/DeliverySite/DeliverySite/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="../User/Login">User Login</a></li>
                             <li><a href="../Manager/Login">Manager Login</a></li>
+                            <li><a href="../Company/Login">Company Login</a></li>
                         </ul>
                     </li>
                 </ul>
