--- a/DeliverySite/DeliverySite/Views/Product/ShowProducts.cshtml
+++ b/DeliverySite/DeliverySite/Views/Product/ShowProducts.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model MedicalStore.ModelView.ProductViewModel
 @{
     ViewBag.Title = "ShowProducts";
 }
@@ -6,4 +6,79 @@
 <h2>Show Products</h2>
 
 
+<style>
+    body {
+        background: #E6E6FA;
+    }
 
+    .search {
+        float: left;
+        margin: 20px;
+    }
+
+    table#t01 th {
+        background-color: black;
+        color: white;
+    }
+
+    .headLine {
+        color: deepskyblue;
+        font-size: 130%;
+        font-weight: bold;
+    }
+
+    table#t01 tr:nth-child(even) {
+        background-color: #eee;
+    }
+
+    table#t01 tr:nth-child(odd) {
+        background-color: #fff;
+    }
+
+    table {
+        width: 100%;
+    }
+
+    table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+</style>
+
+
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.product.PrdName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.product.price)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.product.CompCode)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.product.PrdId)
+        </th>
+        <th></th>
+    </tr>
+
+    @foreach (var item in Model.products)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.PrdName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.price)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CompCode)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PrdId)
+            </td>
+        </tr>
+    }
+
+</table>
