--- a/DeliverySite/DeliverySite/Views/Product/ShowProducts.cshtml
+++ b/DeliverySite/DeliverySite/Views/Product/ShowProducts.cshtml
@@ -49,16 +49,16 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.product.PrdName)
+            @Html.DisplayNameFor(model => model.product.Product Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.product.price)
+            @Html.DisplayNameFor(model => model.product.Price)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.product.CompCode)
+            @Html.DisplayNameFor(model => model.product.Company Code)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.product.PrdId)
+            @Html.DisplayNameFor(model => model.product.Product ID)
         </th>
         <th></th>
     </tr>
