--- a/DeliverySite/DeliverySite/Views/Shared/_LayoutUsers.cshtml
+++ b/DeliverySite/DeliverySite/Views/Shared/_LayoutUsers.cshtml
@@ -45,7 +45,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Products", "ShowProducts", "Product")</li>
+                    <li>@Html.ActionLink("User Menu", "UserWindow", "User")</li>
                     <li>@Html.ActionLink("Make Reservation", "Index", "Home")</li>
                     <li>@Html.ActionLink("Watch Yours Orders", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
