--- a/DeliverySite/DeliverySite/Views/Home/Contact.cshtml
+++ b/DeliverySite/DeliverySite/Views/Home/Contact.cshtml
@@ -1,17 +1,24 @@
-﻿@{
-    ViewBag.Title = "Contact";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿
+    @{
+        ViewBag.Title = "Welcome to Contact Page";
+    }
+    <h2>@ViewBag.Title.</h2>
+<h1 style="background-color:LightGray;">
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+    Contact With us
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+
+    <address>
+        One Microsoft Way<br />
+        Redmond, WA 98052-6399<br />
+        Phone Number : 425.555.0100<br/>
+       
+    </address>
+
+    <address>
+        <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
+        <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    </address>
+
+
+</h1>
