--- a/DeliverySite/DeliverySite/Views/Shared/_LayoutCompanies.cshtml
+++ b/DeliverySite/DeliverySite/Views/Shared/_LayoutCompanies.cshtml
@@ -46,10 +46,12 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Company Menu", "CompanyWindow", "Company")</li>
-                    <li>@Html.ActionLink("Products", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Edit Products", "EditProducts", "Company")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li id="signout">@Html.ActionLink("Sign out", "SignOut", "Home")</li>
+                    <li>@Html.ActionLink("Change Password", "ChangePassword", "Company")</li>
+
                 </ul>
                 <span class="hallo" style="color:red">Welcome @Session["UserName"]</span>
 
