--- a/DeliverySite/DeliverySite/Views/Shared/_LayoutUsers.cshtml
+++ b/DeliverySite/DeliverySite/Views/Shared/_LayoutUsers.cshtml
@@ -51,6 +51,8 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li id="signout">@Html.ActionLink("Sign out", "SignOut", "Home")</li>
+                    <li>@Html.ActionLink("Change Password", "ChangePassword", "User")</li>
+
                 </ul>
                 <span class="hallo" style="color:red">Welcome @Session["UserName"]</span>
 
