--- a/DeliverySite/DeliverySite/Views/Shared/_LayoutUsers.cshtml
+++ b/DeliverySite/DeliverySite/Views/Shared/_LayoutUsers.cshtml
@@ -18,6 +18,16 @@
         margin-top: 15px;
         font-size: medium;
     }
+
+    .footer {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        padding: 1rem;
+        background-color: #efefef;
+        text-align: center;
+    }
 </style>
 
 <!DOCTYPE html>
@@ -64,10 +74,13 @@
 
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Delivery Site</p>
-        </footer>
+        <div class="footer">
+            <hr />
+
+            <footer>
+                <p>&copy; @DateTime.Now.Year - Delivery Site - Kfir Nahamani & Or Shalit & Shimon Emuna & Tomer Angel</p>
+            </footer>
+        </div>
     </div>
 
 
