show product  fixes

--- a/DeliverySite/DeliverySite/Views/User/UserWindow.cshtml
+++ b/DeliverySite/DeliverySite/Views/User/UserWindow.cshtml
@@ -60,9 +60,9 @@
     <a href="../Company/ShowCompanies">
         <div class="options" id="option3">Show Companies</div>
     </a>
-    @*<a href="../Product/AddProduct">
-        <div class="options" id="option4">Add new Product</div>
-    </a>*@
+    <a href="../Product/ShowProducts">
+        <div class="options" id="option4">Show Products</div>
+    </a>
 
     <script></script>
 </body>
