--- a/DeliverySite/DeliverySite/Views/Company/EditProducts.cshtml
+++ b/DeliverySite/DeliverySite/Views/Company/EditProducts.cshtml
@@ -6,7 +6,7 @@
 
 }
 
-<h2>ShowPatients</h2>
+<h2>Products:</h2>
 
 <style>
     body {
@@ -69,16 +69,16 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.product.PrdName)
+            Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.product.price)
+            Price
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.product.CompCode)
+            Company Code
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.product.PrdId)
+            ID
         </th>
         <th></th>
     </tr>
