--- a/DeliverySite/DeliverySite/Views/Manager/ManagerWindow.cshtml
+++ b/DeliverySite/DeliverySite/Views/Manager/ManagerWindow.cshtml
@@ -70,7 +70,7 @@
         <div class="options" id="option4">Add new Product</div>
     </a>
 
-    <a href="../Manager/EditCompanies">
+    <a href="../Company/ShowCompanies">
         <div class="options" id="option5">Show Companies</div>
     </a>
 
