--- a/DeliverySite/DeliverySite/Views/Shared/_LayoutUsers.cshtml
+++ b/DeliverySite/DeliverySite/Views/Shared/_LayoutUsers.cshtml
@@ -58,8 +58,8 @@
                     <li>@Html.ActionLink("User Menu", "UserWindow", "User")</li>
                     <li>@Html.ActionLink("Make Reservation", "Index", "Home")</li>
                     <li>@Html.ActionLink("Watch Yours Orders", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @*<li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                     <li id="signout">@Html.ActionLink("Sign out", "SignOut", "Home")</li>
                     <li>@Html.ActionLink("Change Password", "ChangePassword", "User")</li>
 
