--- a/DeliverySite/DeliverySite/Views/Shared/_Layout.cshtml
+++ b/DeliverySite/DeliverySite/Views/Shared/_Layout.cshtml
@@ -33,8 +33,8 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Products", "ShowProducts", "Product")</li>
                     @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @*<li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                     @*<li>@Html.ActionLink("Login", "Login", "Home")</li>*@
                     <li>@Html.ActionLink("Sign up", "SignUp", "Home")</li>
                     <li class="dropdown">
