--- a/DeliverySite/DeliverySite/Views/Shared/_LayoutCompanies.cshtml
+++ b/DeliverySite/DeliverySite/Views/Shared/_LayoutCompanies.cshtml
@@ -57,8 +57,8 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Company Menu", "CompanyWindow", "Company")</li>
                     <li>@Html.ActionLink("Edit Products", "EditProducts", "Company")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @*<li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                     <li id="signout">@Html.ActionLink("Sign out", "SignOut", "Home")</li>
                     <li>@Html.ActionLink("Change Password", "ChangePassword", "Company")</li>
 
