--- a/DeliverySite/DeliverySite/Views/User/ChangePassword.cshtml
+++ b/DeliverySite/DeliverySite/Views/User/ChangePassword.cshtml
@@ -47,6 +47,7 @@
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-2">
                     <label class="label-warning">@TempData["changePassword"]</label>
+                    <label class="label-warning">@TempData["NotGoodPass"]</label>
                 </div>
             </div>
         </div>
