--- a/DeliverySite/DeliverySite/Views/Manager/ManagerWindow.cshtml
+++ b/DeliverySite/DeliverySite/Views/Manager/ManagerWindow.cshtml
@@ -54,29 +54,31 @@
 </head>
 
 <body>
-    <a href="../Manager/AddNewManager">
-        <div class="options" id="option1">option one</div>
-    </a>
+    <div class="container body-content">
+        <a href="../Manager/AddNewManager">
+            <div class="options" id="option1">option one</div>
+        </a>
 
-    <a href="../Manager/ShowManagers">
-        <div class="options" id="option2">option two</div>
-    </a>
+        <a href="../Manager/ShowManagers">
+            <div class="options" id="option2">option two</div>
+        </a>
 
-    <a href="../User/ShowUsers">
-        <div class="options" id="option3">Show Users</div>
-    </a>
+        <a href="../User/ShowUsers">
+            <div class="options" id="option3">Show Users</div>
+        </a>
 
-    <a href="../Product/AddProduct">
-        <div class="options" id="option4">Add new Product</div>
-    </a>
+        <a href="../Product/AddProduct">
+            <div class="options" id="option4">Add new Product</div>
+        </a>
 
-    <a href="../Manager/EditCompanies">
-        <div class="options" id="option5">Show Companies</div>
-    </a>
+        <a href="../Manager/EditCompanies">
+            <div class="options" id="option5">Show Companies</div>
+        </a>
 
-    <a href="../Company/addCompany">
-        <div class="options" id="option6">Add new Product</div>
-    </a>
+        <a href="../Company/addCompany">
+            <div class="options" id="option6">Add new Product</div>
+        </a>
+    </div>
 
     <script></script>
 </body>
