--- a/DeliverySite/DeliverySite/Views/Shared/_LayoutManagers.cshtml
+++ b/DeliverySite/DeliverySite/Views/Shared/_LayoutManagers.cshtml
@@ -7,8 +7,8 @@
 <style>
 
     body {
+        
         background: #E6E6FA;
-       
     }
 
     .hallo {
@@ -18,11 +18,12 @@
     }
 
     .footer {
-        background: #d3d0d0;
+        background:#eae3e3;
         color: black;
         line-height: 50px;
         padding: 0 20px;
     }
+
 </style>
 
 <!DOCTYPE html>
