home page image

--- a/DeliverySite/DeliverySite/Views/User/UserWindow.cshtml
+++ b/DeliverySite/DeliverySite/Views/User/UserWindow.cshtml
@@ -51,19 +51,20 @@
 </head>
 
 <body>
-    @*<a href="../Manager/AddNewManager">
-        <div class="options" id="option1">option one</div>
-    </a>
-    <a href="../Manager/ShowManagers">
-        <div class="options" id="option2">option two</div>
-    </a>*@
-    <a href="../Company/ShowCompanies">
-        <div class="options" id="option3">Show Companies</div>
-    </a>
-    <a href="../Product/ShowProducts">
-        <div class="options" id="option4">Show Products</div>
-    </a>
-
+    <div class="container body-content">
+        @*<a href="../Manager/AddNewManager">
+            <div class="options" id="option1">option one</div>
+        </a>
+        <a href="../Manager/ShowManagers">
+            <div class="options" id="option2">option two</div>
+        </a>*@
+        <a href="../Company/ShowCompanies">
+            <div class="options" id="option3">Show Companies</div>
+        </a>
+        <a href="../Product/ShowProducts">
+            <div class="options" id="option4">Show Products</div>
+        </a>
+    </div>
     <script></script>
 </body>
 </html>
