--- a/DeliverySite/DeliverySite/Views/Shared/_Layout.cshtml
+++ b/DeliverySite/DeliverySite/Views/Shared/_Layout.cshtml
@@ -4,6 +4,13 @@
     body {
         background: #E6E6FA;
     }
+
+    .footer {
+        background: #eae3e3;
+        color: black;
+        line-height: 50px;
+        padding: 0 20px;
+    }
 </style>
 
 <!DOCTYPE html>
@@ -54,10 +61,13 @@
 
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Delivery Store - Kfir Nahamani & Or Shalit & Shimon Emuna & Tomer Angel</p>
-        </footer>
+        <div class="footer">
+            <hr />
+
+            <footer>
+                <p>&copy; @DateTime.Now.Year - Delivery Site - Kfir Nahamani & Or Shalit & Shimon Emuna & Tomer Angel</p>
+            </footer>
+        </div>
     </div>
 
     <script type="text/javascript">
