--- a/DeliverySite/DeliverySite/Views/Shared/_LayoutUsers.cshtml
+++ b/DeliverySite/DeliverySite/Views/Shared/_LayoutUsers.cshtml
@@ -20,13 +20,10 @@
     }
 
     .footer {
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        padding: 1rem;
-        background-color: #efefef;
-        text-align: center;
+        background: #eae3e3;
+        color: black;
+        line-height: 50px;
+        padding: 0 20px;
     }
 </style>
 
