--- a/DeliverySite/DeliverySite/Views/Company/ChangePassword.cshtml
+++ b/DeliverySite/DeliverySite/Views/Company/ChangePassword.cshtml
@@ -5,7 +5,7 @@
 
 }
 
-<h2>ChangePassword</h2>
+<h2>Change Password</h2>
 
 <!DOCTYPE html>
 <html>
@@ -19,12 +19,12 @@
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>Manager</h4>
+            <h4>Company</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
             <div class="form-group">
-                <label class="control-label col-md-2">Please enter you new Password</label><br />
+                <label class="control-label col-md-2">Please enter your new Password</label><br />
                 <div class="col-md-10">
                     <input class="form-control" id="password" name="password" type="password" />
                 </div>
