--- a/DeliverySite/DeliverySite/Views/User/ChangePassword.cshtml
+++ b/DeliverySite/DeliverySite/Views/User/ChangePassword.cshtml
@@ -5,7 +5,7 @@
 
 }
 
-<h2>ChangePassword</h2>
+<h2>Change Password</h2>
 
 <!DOCTYPE html>
 <html>
@@ -19,19 +19,19 @@
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>Manager</h4>
+            <h4>User</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
             <div class="form-group">
-                <label class="control-label col-md-2">Please enter you new Password</label><br />
+                <label class="control-label col-md-2">Please enter your new Password</label><br />
                 <div class="col-md-10">
                     <input class="form-control" id="password" name="password" type="password" />
                 </div>
             </div>
 
             <div class="form-group">
-                <label class="control-label col-md-2">Confirm Your new Password</label><br />
+                <label class="control-label col-md-2">Confirm your new Password</label><br />
 
                 <div class="col-md-10">
                     <input id="confirmPassword" name="confirmPassword" class="form-control" type="password" /><br />
