delete product fix

--- a/DeliverySite/DeliverySite/Views/Company/CompanyWindow.cshtml
+++ b/DeliverySite/DeliverySite/Views/Company/CompanyWindow.cshtml
@@ -52,10 +52,8 @@
 
 <body>
     <div class="container body-content">
-        @*<a href="../Manager/AddNewManager">
-            <div class="options" id="option1">option one</div>
-        </a>
-        <a href="../Manager/ShowManagers">
+        
+        @*@<a href="../Manager/ShowManagers">
             <div class="options" id="option2">option two</div>
         </a>
         <a href="../User/ShowUsers">
