--- a/DeliverySite/DeliverySite/Views/Manager/ManagerWindow.cshtml
+++ b/DeliverySite/DeliverySite/Views/Manager/ManagerWindow.cshtml
@@ -67,9 +67,9 @@
             <div class="options" id="option3">Show Users</div>
         </a>
 
-        <a href="../Product/AddProduct">
+        @*<a href="../Product/AddProduct">
             <div class="options" id="option4">Add new Product</div>
-        </a>
+        </a>*@
 
         <a href="../Manager/EditCompanies">
             <div class="options" id="option5">Show Companies</div>
