--- a/DeliverySite/DeliverySite/Views/Company/CompanyWindow.cshtml
+++ b/DeliverySite/DeliverySite/Views/Company/CompanyWindow.cshtml
@@ -51,19 +51,18 @@
 </head>
 
 <body>
-    @*<a href="../Manager/AddNewManager">
-        <div class="options" id="option1">option one</div>
-    </a>
-    <a href="../Manager/ShowManagers">
-        <div class="options" id="option2">option two</div>
-    </a>
-    <a href="../User/ShowUsers">
-        <div class="options" id="option3">Show Users</div>*@
-    </a>
-    <a href="../Product/AddProduct">
-        <div class="options" id="option4">Add new Product</div>
-    </a>
-
+    <div class="container body-content">
+        
+        @*@<a href="../Manager/ShowManagers">
+            <div class="options" id="option2">option two</div>
+        </a>
+        <a href="../User/ShowUsers">
+            <div class="options" id="option3">Show Users</div>*@
+    
+        <a href="../Product/AddProduct">
+            <div class="options" id="option4">Add new Product</div>
+        </a>
+    </div>
     <script></script>
 </body>
 </html>
