--- a/DeliverySite/DeliverySite/Views/Shared/_LayoutUsers.cshtml
+++ b/DeliverySite/DeliverySite/Views/Shared/_LayoutUsers.cshtml
@@ -53,7 +53,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("User Menu", "UserWindow", "User")</li>
-                    <li>@Html.ActionLink("Make Reservation", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Make Reservation", "MakeOrder", "User")</li>
                     <li>@Html.ActionLink("Watch Yours Orders", "Index", "Home")</li>
                     @*<li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
