--- a/DeliverySite/DeliverySite/Views/User/MakeOrder.cshtml
+++ b/DeliverySite/DeliverySite/Views/User/MakeOrder.cshtml
@@ -53,14 +53,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
 </head>
+
 
 <body>
 
     <form method="post" action="../User/AddOrderToDb">
 
-        @Html.DropDownListFor(m => m.product.PrdId, new SelectList(Model.products, "PrdId", "PrdName"), "Please choose your medicine", new { name = "Name", id = "PrdId", @class="btn btn-secondary dropdown-toggle" })
+        @Html.DropDownListFor(m => m.product.PrdId, new SelectList(Model.products, "PrdId", "PrdName"), "Please choose your medicine", new { name = "Name", id = "PrdId", @class= "btn btn-default dropdown-toggle" })
 
         <br />
         <br />
