--- a/DeliverySite/DeliverySite/Views/User/UserWindow.cshtml
+++ b/DeliverySite/DeliverySite/Views/User/UserWindow.cshtml
@@ -64,6 +64,9 @@
         <a href="../Product/ShowProducts">
             <div class="options" id="option4">Show Products</div>
         </a>
+        <a href="../User/ShowOrders">
+            <div class="options" id="option4">Show Products</div>
+        </a>
     </div>
     <script></script>
 </body>
