--- a/DeliverySite/DeliverySite/Views/User/MakeOrder.cshtml
+++ b/DeliverySite/DeliverySite/Views/User/MakeOrder.cshtml
@@ -1,6 +1,8 @@
 ﻿@model DeliverySite.ModelView.ProductViewModel
 @{
     ViewBag.Title = "MakeOrder";
+    Layout = "~/Views/Shared/_LayoutUsers.cshtml";
+
 }
 
 <h2>MakeOrder</h2>
