--- a/DeliverySite/DeliverySite/Views/Company/ShowCompanies.cshtml
+++ b/DeliverySite/DeliverySite/Views/Company/ShowCompanies.cshtml
@@ -98,34 +98,9 @@
                 @Html.DisplayFor(modelItem => item.CompCode)
             </td>
             
-            @*<td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </td>*@
+            <td>
+                @Html.ActionLink("Contact", "../User/ContactCompany", new { id = item.CompCode }) |
+            </td>
         </tr>
     }
 </table>
-@*<table id="t01">
-        <tr class="headLine">
-            <td>First Name</td>
-            <td>Last Name</td>
-            <td>ID</td>
-            <td>User Name</td>
-        </tr>
-        @foreach (Patient obj in Model.patients)
-        {
-            <tr>
-                <td>@obj.FirstName</td>
-                <td>@obj.LastName</td>
-                <td>@obj.Id</td>
-                <td>@obj.UserName</td>
-
-            </tr>
-        }
-    </table>*@
-
-@*@{
-        WebGrid obj = new WebGrid(Model.patients);
-    }
-    @obj.GetHtml()*@
