--- a/DeliverySite/DeliverySite/Views/User/UserWindow.cshtml
+++ b/DeliverySite/DeliverySite/Views/User/UserWindow.cshtml
@@ -29,7 +29,7 @@
     }
 
     #option2 {
-        content: url(https://cdn4.iconfinder.com/data/icons/gray-business-2/512/xxx041-512.png);
+        content: url(https://cdn.iconscout.com/icon/premium/png-256-thumb/review-1-234332.png);
     }
 
     #option3 {
@@ -54,10 +54,10 @@
     <div class="container body-content">
         @*<a href="../Manager/AddNewManager">
             <div class="options" id="option1">option one</div>
-        </a>
-        <a href="../Manager/ShowManagers">
-            <div class="options" id="option2">option two</div>
         </a>*@
+        <a href="../User/AddReview">
+            <div class="options" id="option2">option two</div>
+        </a>
         <a href="../Company/ShowCompanies">
             <div class="options" id="option3">Show Companies</div>
         </a>
@@ -65,7 +65,7 @@
             <div class="options" id="option4">Show Products</div>
         </a>
         <a href="../User/ShowOrders">
-            <div class="options" id="option4">Show Products</div>
+            <div class="options" id="option5">Show Products</div>
         </a>
     </div>
     <script></script>
